--- a/proj.win32/HackingRPG.vcxproj.filters
+++ b/proj.win32/HackingRPG.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\Classes\Player.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\MapGrid.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -39,6 +42,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Definition.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\MapGrid.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
