--- a/proj.win32/HackingRPG.vcxproj.filters
+++ b/proj.win32/HackingRPG.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\Classes\MapGrid.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Status.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -45,6 +48,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\MapGrid.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Status.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
