--- a/proj.win32/HackingRPG.vcxproj.filters
+++ b/proj.win32/HackingRPG.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\Classes\Status.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ShopScene.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -51,6 +54,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Status.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ShopScene.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
